tests/expected/task-1/04-invalid-number-of-args-1.uc.out
---
test: run suites/task-1/04-invalid-number-of-args-1.uc
---
suites/task-1/04-invalid-number-of-args-1.uc:6:12: execution error: Invalid argument list: expected 2, got: 1
     return f(1);
             ^


exit: 1
